--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,7 @@ function exportScores() {
     ];
 
     const csvFileDateStr = now.toLocaleDateString('en-US', { year: 'numeric', month: '2-digit', day: '2-digit' }).replace(/\//g, '-');
-    const className = classes[currentClassIndex].name.replace(/[^a-zA-Z0-9]/g, '_');
+    const className = classes[currentClassIndex].name.replace(/[^a-zA-Z0-9]/g, '_').replace(/_{2,}/g, '_').replace(/^_|_$/g, '');
     const csvContent = finalCsvRows.join('\n');
     const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
     const link = document.createElement('a');
